@@ -1402,5 +1402,12 @@
   <string id="20173">FTP Server</string>
   <string id="20174">ITunes music share (DAAP)</string>
   <string id="20175">UPnP Server</string>
+  <string id="20176">Show Video Info</string>
+  <string id="20177">Done</string>
+  <string id="20178">Shift</string>
+  <string id="20179">Caps Lock</string>
+  <string id="20180">Symbols</string>
+  <string id="20181">Backspace</string>
+  <string id="20182">Space</string>
   <string id="29999">Auto Flicker Filter Patch</string>
 </strings>
