@@ -37,7 +37,7 @@
    <posx>207</posx>
    <posy>63</posy>
    <align>left</align>
-   <label>130</label>
+   <label>10007</label>
    <font>special13</font>
    <include>textcolorwhite</include>
   </control>
