@@ -82,7 +82,7 @@
 	<posx>207</posx>
 	<posy>63</posy>
 	<align>left</align>
-	<label>User Login</label>
+	<label>20096</label>
 	<font>special13</font>
 	<include>homemisc</include>
  </control>
