@@ -168,7 +168,7 @@
     <posx>211</posx>
     <posy>157</posy>
     <width>445</width>
-    <label>Show Video Info</label>
+    <label>20176</label>
     <onclick>Skin.ToggleSetting(homepageVideoinfo)</onclick>
     <selected>Skin.HasSetting(homepageVideoinfo)</selected>
     <onleft>11</onleft>
@@ -417,7 +417,7 @@
     <label>20078</label>
     <texturefocus>-</texturefocus>
     <texturenofocus>-</texturenofocus>
-    <visible>[Control.HasFocus(13) | ControlGroup(4).HasFocus()] + !Skin.HasSetting(bookmarkbuttons) + !Skin.String(ProgramsBookmark1)</visible>
+    <visible>[Control.HasFocus(13) | ControlGroup(4).HasFocus()] + !Skin.HasSetting(bookmarkbuttons) + !Skin.String(ProgramsBookmark1,fishy)</visible>
     <include>contentpanelslide</include>
     <include>textcolorgrey</include>
    </control>
